--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ It's to allow commas and brackets be in the text.</li>
 <li>each attribute is a pair of 'name' and (optional) value. Name are delimited by ':' (colon) or '=' (equals sign). 
 If attribute has no an explicit value (ex. <code>{gray, big}</code>) then it is implicitly equal to <em>true</em>.<br>
 Attributes are delimited by ',' (comma)</li>
-<li>Special symbol '#' (number sign | hash sign | octothorp (!?)) is reserved for the future use (yes, we'll have comments! and not only...). It MUST be escaped ('/#') everywhere for now</li>
-<li>One of the symbols ('\' | '+' | '-'), or even all, will be used in the line end to make the line continuation.<br>
+<li>Special symbol '#' (number sign | hash sign | octothorpe (!?)) is reserved for the future use (yes, we'll have comments! and not only...). It MUST be escaped ('/#') everywhere for now</li>
+<li>One of the symbols '\' | '+' | '-', or even all, will be used in the line end to make the line continuation.<br>
 And it will be in some nearest build.</li>
 </ul>
         </section>
