Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p><del>TL'DR This project emerged because of the stupid and lazy users</del><br>
 The aim of the project was to organize some customers' data in simple and human-readable manner.<br>
 Source data may be saved/edited in this format, but for visualization and other processing they have to be converted into Javascript objects.<br>
-The situation is very similar to when the data in CSV format may be stored/edited separately from their pattern in a spreadsheet or database.
+The situation is very similar to when the data in CSV format may be stored/edited separately from their pattern in a spreadsheet or database.<br>
 But unlike CSV, which allows you to store tabular data, YOM is used to store data with hierarchical (tree-like) structures of arbitrary depth.<br>
 Examples of such data are given below.  </p>
 
