--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ And so on...
 <ul>
 <li>'/' (slash) is used for escaping. So '/x' makes to treat 'x' literally (ex: '/,' --&gt; ',' , '//' --&gt; '/' etc.)<br>
 It's to allow commas and brackets be in the text.</li>
-<li>each attribute is a pair of 'name' and (optional) value. Name are delimited by ':' (colon) or '=' (equals sign). 
+<li>Each attribute is a pair of 'name' and (optional) value. Name are delimited by ':' (colon) or '=' (equals sign). 
 If attribute has no an explicit value (ex. <code>{gray, big}</code>) then it is implicitly equal to <em>true</em>.<br>
 Attributes are delimited by ',' (comma)</li>
 <li>Special symbol '#' (number sign | hash sign | octothorpe (!?)) is reserved for the future use (yes, we'll have comments! and not only...). It MUST be escaped ('/#') everywhere for now</li>
