Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@ Attributes are delimited by ',' (comma)</li>
 <li>One of the symbols '\' | '+' | '-', or even all, will be used in the line end to make the line continuation.<br>
 And it will be in some nearest build.</li>
 </ul>
+
+<h1>
+<a id="whats-in-the-result" class="anchor" href="#whats-in-the-result" aria-hidden="true"><span class="octicon octicon-link"></span></a>What's in the result</h1>
+
+<p>TODO</p>
+
+<h1>
+<a id="q--a" class="anchor" href="#q--a" aria-hidden="true"><span class="octicon octicon-link"></span></a>Q &amp; A</h1>
+
+<p><strong><em>Q:</em></strong> Why YOM? what it means?<br>
+<strong><em>A:</em></strong> It means "hey you, do <strong>Y</strong>our <strong>O</strong>wn <strong>M</strong>odel|Markup|Markdown" I said one fine day  </p>
+
+<p><strong><em>Q:</em></strong> Do you know that word 'Yom' has another <a href="http://en.wikipedia.org/wiki/Yom">meaning</a>?<br>
+<strong><em>A:</em></strong> I realized it, but it was late. It's not by intention. It's just a coincidence. Really, I wrote YOM at night.</p>
         </section>
 
         <aside id="sidebar">
