--- a/index.html
+++ b/index.html
@@ -133,7 +133,15 @@ And it will be in some nearest build.</li>
 <h1>
 <a id="whats-in-the-result" class="anchor" href="#whats-in-the-result" aria-hidden="true"><span class="octicon octicon-link"></span></a>What's in the result</h1>
 
-<p>TODO</p>
+<p>YOM parse function returns the javascript object of the form:</p>
+
+<pre><code>{
+    label: "string",               // a text value of the node
+    attr:  {a1: v1, a2: v2, ...},  // attributes of the node
+    nodes: [{}, {}, ...]           // array of subnodes; each element is {label, attr, nodes} triplet;
+                                   //   and so on, recursively
+}
+</code></pre>
 
 <h1>
 <a id="q--a" class="anchor" href="#q--a" aria-hidden="true"><span class="octicon octicon-link"></span></a>Q &amp; A</h1>
