Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Footer [Status Bar [Info1, Info2], Powered By, Copyright notice {color: gold}]
 <h2>
 <a id="example-4-contents-of-this-page" class="anchor" href="#example-4-contents-of-this-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example #4 (contents of this page)</h2>
 
-<pre><code>Prehistory [
+<pre><code>Purposes of YOM language [
     blah-blah-blah
     ]
 
@@ -150,7 +150,7 @@ Similar format is <a href="http://evolution.genetics.washington.edu/phylip/newic
 <a id="q--a" class="anchor" href="#q--a" aria-hidden="true"><span class="octicon octicon-link"></span></a>Q &amp; A</h1>
 
 <p><strong><em>Q:</em></strong> Why YOM? what it means?<br>
-<strong><em>A:</em></strong> It means "hey you, do <strong>Y</strong>our <strong>O</strong>wn <strong>M</strong>odel|Markup|Markdown" I said one fine day  </p>
+<strong><em>A:</em></strong> "do <strong>Y</strong>our <strong>O</strong>wn <strong>M</strong>odel"</p>
 
 <p><strong><em>Q:</em></strong> Do you know that word 'Yom' has another <a href="http://en.wikipedia.org/wiki/Yom">meaning</a>?<br>
 <strong><em>A:</em></strong> I realized it, but it was late. It's not by intention. It's just a coincidence. Really, I wrote YOM at night.</p>
