--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
@@ -122,10 +122,23 @@ It's to allow commas and brackets be in the text.</li>
 <li>Each attribute is a pair of the name and optional value. The name is separated from the value (if any) by ':' (colon) or '=' (equals sign).<br>
 If attribute has no an explicit value (ex. <code>{gray, big}</code>) then it is implicitly equal to <em>true</em>.<br>
 Attributes are delimited by ',' (comma)</li>
-<li>Special symbol '#' (number sign | hash sign | octothorpe (!?)) is reserved for the future use (yes, we'll have comments! and not only...). It MUST be escaped ('/#') everywhere for now</li>
-<li>One of the symbols '\' | '+' | '-', or even all, will be used in the line end to make the line continuation.<br>
-And it will be in some nearest build.</li>
+<li>Any of the symbols '\' | '+' | '-' may be used at the line end to make the line continuation.<br>
+It allows multiline node texts.</li>
+<li>Special symbol '#' (number sign | hash sign | octothorpe (!?)) is used for special processing:<br>
+1) # comments; if there is a space blank after '#' then a subsequent node is entirely ignored. It allows to make comments in the source<br>
+</li>
 </ul>
+
+<pre><code>Normal text # this is ignored to the end of line
+Another text # inline comment, text continues/, but it's an another node
+# [
+   Multiline comment:
+   2nd line,
+   etc.
+]
+</code></pre>
+
+<p>2) #&lt;name&gt;. The &lt;name&gt; should start with letter, '<em>' or '$' and continues with letter, digit, '</em>' or '$'. It adds the prop <code>"hash": {&lt;name&gt;: true}</code> to a subsequent node.</p>
 
 <h1>
 <a id="whats-in-the-result" class="anchor" href="#whats-in-the-result" aria-hidden="true"><span class="octicon octicon-link"></span></a>What's in the result</h1>
@@ -133,7 +146,8 @@ And it will be in some nearest build.</li>
 <p>YOM parser converts YOM formatted text and returns the javascript object of the form:</p>
 
 <pre><code>{
-    label: "string",               // a text value of the node
+    hash: {"hash_name": true},    // if any
+    text: "string",               // a text value of the node
     attr:   {a1: v1, a2: v2, ...}, // attributes of the node
     nodes: [{}, {}, ...]           // arrray of subnodes; each element is {label, attr, nodes} triplet;
                                    //   and so on, recursively
