Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@ Attributes are delimited by ',' (comma)</li>
 <li>Any of the symbols '\' | '+' | '-' may be used at the line end to make the line continuation.<br>
 It allows multiline node texts.</li>
 <li>Special symbol '#' (number sign | hash sign | octothorpe (!?)) is used for special processing:<br>
-1) # comments; if there is a space blank after '#' then a subsequent node is entirely ignored. It allows to make comments in the source<br>
-</li>
+1) # comments; if there is a space blank after '#' then a subsequent node is entirely ignored. It allows to make comments in the source</li>
 </ul>
 
 <pre><code>Normal text # this is ignored to the end of line
